--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,9 +186,9 @@
     "h&p-well-being": "Health & Physical well-being",
     "mental-well-being": "Mental Health well-being",
     "career-journey": "Career Journey",
-    "career-journey-text": "A short, guided internship for graduating students interested in finance and investing—offering practical exposure to industry specifics and work practices to inform career choices.\n\nHeld annually at scale to grow the future talent pipeline and support the development of the sector.",
+    "career-journey-text": "A paid internship program for students majoring in finance, banking, and business.\n\nCombining theoretical and practical training, the program provides real industry experience and offers career opportunities for outstanding talents.",
     "early-bird": "Early Bird",
-    "early-bird-text": "A paid internship program for students majoring in finance, banking, and business.\n\nCombining theoretical and practical training, the program provides real industry experience and offers career opportunities for outstanding talents.",
+    "early-bird-text": "A short, guided internship for graduating students interested in finance and investing—offering practical exposure to industry specifics and work practices to inform career choices.\n\nHeld annually at scale to grow the future talent pipeline and support the development of the sector.",
     "apply-now": "Apply Now",
     "pro-network": "Professional Network",
     "health": "Health",
