--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -185,9 +185,9 @@
     "h&p-well-being": "Эрүүл мэнд ба бие бялдар",
     "mental-well-being": "Сэтгэцийн эрүүл мэнд",
     "career-journey": "Career Journey",
-    "career-journey-text": "Санхүү, хөрөнгө оруулалтад сонирхолтой төгсөх ангийн оюутнуудад зориулсан богино, чиглүүлэгтэй дадлагын хөтөлбөр—салбарын онцлог, ажлын дадлыг бодитоор мэдрүүлж, мэргэжлийн сонголтод дэм болдог.\n\nЖил бүр өргөн хүрээнд зохион байгуулагдаж, ирээдүйн мэргэжилтнүүдийн урсгалыг бэхжүүлж, салбарын хөгжилд хувь нэмэр оруулдаг.",
+    "career-journey-text": "Санхүү, банк, бизнесийн чиглэлийн оюутнуудад зориулсан цалинтай дадлагын хөтөлбөр.\n\nОнол ба практикийг хослуулсан энэхүү хөтөлбөр нь салбарын бодит ажлын туршлага олгож, шилдэг оролцогчдод ажиллах боломж нээдэг.",
     "early-bird": "Early Bird",
-    "early-bird-text": "Санхүү, банк, бизнесийн чиглэлийн оюутнуудад зориулсан цалинтай дадлагын хөтөлбөр.\n\nОнол ба практикийг хослуулсан энэхүү хөтөлбөр нь салбарын бодит ажлын туршлага олгож, шилдэг оролцогчдод ажиллах боломж нээдэг.",
+    "early-bird-text": "Санхүү, хөрөнгө оруулалтад сонирхолтой төгсөх ангийн оюутнуудад зориулсан богино, чиглүүлэгтэй дадлагын хөтөлбөр—салбарын онцлог, ажлын дадлыг бодитоор мэдрүүлж, мэргэжлийн сонголтод дэм болдог.\n\nЖил бүр өргөн хүрээнд зохион байгуулагдаж, ирээдүйн мэргэжилтнүүдийн урсгалыг бэхжүүлж, салбарын хөгжилд хувь нэмэр оруулдаг.",
     "apply-now": "Одоо өргөдөл илгээх",
     "pro-network": "Мэргэжлийн сүлжээ",
     "health": "Эрүүл мэнд",
