--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,8 +16,8 @@
     "title1": "Balanced Growth",
     "companyName": "Balanced Growth Management",
     "text": "The Concept of Balanced Growth was first introduced in the 1950s by economist Ragnar Nurkse. It emphasizes the importance of developing all key sectors of the economy such as agriculture, industry, and services in parallel to achieve long-term, stable growth. Instead of focusing on a single area, Nurkse believed that coordinated investment across multiple sectors would expand domestic markets and create a positive ripple effect across the economy.",
-    "text1": "Today, this principle goes beyond macroeconomics and is widely applied in business and investment strategies. It represents a smart balance between risk and return prioritizing sustainable progress over short-term gains.",
-    "text2": "At Balanced Growth Management, we are committed to this philosophy. We strive to deliver long-term, stable investment solutions for our clients and partners - guided by trust, strategy, and a vision for sustainable financial growth.",
+    "text1": "Today, this principle goes beyond macroeconomics and is widely applied in business and investment strategies. It represents a smart balance between risk and return prioritizing sustainable progress over short term gains.",
+    "text2": "At Balanced Growth Management, we are committed to this philosophy. We strive to deliver long-term, stable investment solutions for our clients and partners guided by trust, strategy, and a vision for sustainable financial growth.",
     "cardText": "YES, WE ARE BALANCERS"
   },
   "hero": {
