--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -37,7 +37,7 @@
     "title1": "Бидний",
     "title2": "Чадварууд",
     "seeMore": "Дэлгэрэнгүй",
-    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
+    "text": "Бид хөрөнгө оруулалтын шийдлүүдийг бүрэн хүргэхийн тулд хөрөнгийн багцын удирдлага, зах зээлийн \nсудалгаа болон зөвлөхийн туршлагыг нэгтгэдэг.",
     "card1": {
       "title": "Портфелийн удирдлага",
       "description": "Танд зориулсан хөрөнгө оруулалтын шийдлүүд \n\nБид таны зорилго, эрсдэл хүлээх чадвар болон урт хугацааны алсын хараанд нийцсэн тусгайлан боловсруулсан портфелийг бүтээгээд удирддаг."
@@ -54,7 +54,7 @@
   "news": {
     "title1": "Мэдээ & Мэдэгдэл",
     "title2": "",
-    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
+    "text": "Дэлхийн болон дотоодын зах зээлийн талаархи шинжээчдийн үзэл бодол, судалгаа, тайлбарыг судлаарай.",
     "seeMore": "Дэлгэрэнгүй"
   },
   "team": {
@@ -129,11 +129,19 @@
     "whatwedo": "Бид юу хийдэг вэ ?",
     "BGTheory": "Балансэд Грөүт гэж юу вэ?",
     "BGMAssetmanagement": "BGM Хөрөнгө удирдлага",
-    "Team introduction": "Баг хамт олон"
+    "Team introduction": "Баг хамт олон",
+    "boardMembers": "ТУЗ-ийн гишүүд",
+    "boardMembersText": "Тогтвортой, хүртээмжтэй өсөлт рүү чиглэсэн BGM-ийн эрхэм зорилгыг \nудирдан чиглүүлдэг алсын хараатай удирдагчдын баг.",
+    "boardMemberTitle1": "CEO Teso Group",
+    "boardMemberTitle2": "CEO Teso Group",
+    "boardMemberTitle3": "CEO Teso Group",
+    "boardMemberName1": "С. Болор",
+    "boardMemberName2": "С. Болор",
+    "boardMemberName3": "С. Болор"
   },
   "whatWeDo": {
     "title": "Бид юу хийдэг вэ",
-    "subtitle": "Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.",
+    "subtitle": "Манай хөрөнгө оруулалтын сангуудаар дамжуулан бид санхүүгийн мэдлэгийг боломж болгон хувиргаж, хөрөнгө оруулагчдыг \nитгэлтэй, зорилготой өсөхөд нь тусалдаг.",
     "aria": {
       "listbox": "Бидний хийдэг ажлын сонголтууд",
       "item": "\"{title}\"-г сонгох"
@@ -209,5 +217,23 @@
     "email": "И-мэйл",
     "fields-are-req": "Бүх талбарыг заавал бөглөнө үү",
     "apply": "Өргөдөл илгээх"
+  },
+  "asset-management": {
+    "title1": "Хөрөнгийн удирдлага",
+    "simplify-invest": "Хөрөнгө оруулалтыг хялбарчлах",
+    "fixed-income": "Тогтмол орлогын сан",
+    "real-state": "Үл хөдлөх хөрөнгийн сан",
+    "saving": "BGM хуримтлалын хөтөлбөр",
+    "fixed-income-text": "“BGM Тогтмол орлогын хөрөнгө оруулалтын хувийн сан” нь манай компанийн байгуулсан анхны хөрөнгө оруулалтын сан бөгөөд тогтвортой өсөлт, хамтын үнэ цэнийг бий болгох зорилготой.\n\nЭнэхүү сан нь эрсдэлийг хариуцлагатайгаар удирдаж, нарийвчилсан судалгаа, шинжилгээнд тулгуурлан тогтмол орлогын хэрэгслийн багцыг бүрдүүлэх замаар мэргэжлийн, ёс зүйтэй хөрөнгө оруулалтын үйлчилгээг үзүүлдэг.",
+    "real-state-text": "“BGM Үл хөдлөх хөрөнгийн хөрөнгө оруулалтын хувийн сан” нь хөрөнгө болон үл хөдлөх хөрөнгийн удирдлагыг хослуулан, хөрөнгө оруулагчдын ирээдүйн үнэ цэнийг бий болгоход чиглэсэн хөрөнгө оруулалтын сан юм.\n\nЭнэ сан нь үнэ цэнэд суурилсан үл хөдлөх хөрөнгийн хөрөнгө оруулалтад төвлөрч, нарийн судалгаа болон олон улсын эрсдэлийн удирдлагын стандартуудыг баримталдаг.",
+    "saving-text": "Санхүүгийн зохицуулах хорооны тусгай зөвшөөрлийн хүрээнд үйл ажиллагаа явуулдаг Balanced Growth Management ХХК нь ажил олгогч болон ажилтны сар бүрийн хуримтлалыг хариуцлагатайгаар удирдах зорилготой “Хуримтлалын хөтөлбөр”-ийг хэрэгжүүлж байна.\n\nЭнэхүү хөтөлбөр нь урт хугацааны санхүүгийн баталгааг дэмжих, тогтвортой үнэ цэнийг бий болгох, ирээдүйн санхүүгийн эрх чөлөөг хамтдаа бүтээх зорилготой.",
+    "fundeManagerTitle1": "BGM сангийн менежер",
+    "fundeManagerTitle2": "BGM сангийн менежер",
+    "fundeManagerTitle3": "BGM сангийн менежер",
+    "fundeManagerName1": "Билэгт Г",
+    "fundeManagerName2": "Оюунжунайн Х",
+    "fundeManagerName3": "Аминаа Б",
+    "teamIntroducition": "Багийн танилцуулга",
+    "teamIntroducitionText": "Таны зорилгод нийцсэн хөрөнгө оруулалтын стратегийг хамтдаа судлахын тулд манай хөрөнгө \nоруулалтын мэргэжилтнүүдтэй шууд холбогдоорой."
   }
 }
