--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,7 @@
     "title1": "Our",
     "title2": "Capabilities",
     "seeMore": "See more",
-    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
+    "text": "We combine portfolio management, market research, and advisory expertise to deliver \ncomplete investment solutions.",
     "card1": {
       "title": "Porfolio Management",
       "description": "Tailored Investment Solutions \n\nWe construct and manage customized portfolios aligned with your goals, risk appetite, and long-term vision."
@@ -54,7 +54,7 @@
   "news": {
     "title1": "News & Insight",
     "title2": "",
-    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
+    "text": "Explore expert perspectives, research, and commentary on global and local markets.",
     "seeMore": "See more"
   },
   "team": {
@@ -109,15 +109,18 @@
     "header1": "our",
     "header2": "company",
     "header3": "Balanced Growth Management",
-    "ceo-creeting": "Asset management is not merely about numbers, but about nurturing trust, discipline, and strategic foresight. \n\nEvery portfolio we build must reflect both integrity and innovation—anchored in research, driven by conviction.",
+    "ceo-creeting": "Asset management isn’t just about numbers. It’s about building trust, staying disciplined, and thinking ahead. \n\nEvery portfolio we create should show honesty and new ideas based on research and guided by strong belief.",
+    "cio-creeting": "There are thousands of investment opportunities around the world. We, Mongolians, should be closer to those opportunities. \n\nOur goal is to help our clients reach them easily. When our clients grow, we grow. We grow together.",
     "mission": "mission",
     "mission-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "vision": "vision",
     "vision-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "value": "value",
     "value-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
-    "ceo-name": "D.Odmaa",
+    "ceo-name": "Odmaa Davaanyam",
     "ceo-pos": "Chief Executive Officer",
+    "cio-name": "Margad.G ",
+    "cio-pos": "Chief Investment Officer",
     "bgm-name": "Balanced Growth Management",
     "text1": "Our company was established with the vision of combining traditional financial markets with technology and innovation to deliver professional, cutting-edge products and services. We operate with the investment and support of TESO Group",
     "text2": "As an asset management company, we create and manage investment funds as tools to grow wealth. By 2025, we manage a total portfolio of approximately ₮50 billion through two licensed private funds and a savings fund program.",
@@ -130,11 +133,19 @@
     "whatwedo": "What We Do ?",
     "BGTheory": "Balanced Growth Theory",
     "BGMAssetmanagement": "BGM Asset Management",
-    "Team introduction": "Team Introduction"
+    "Team introduction": "Team Introduction",
+    "boardMembers": "Board members",
+    "boardMembersText": "A Team of visionary leaders driving BGM’s mission \ntoward sustainable and inclusive growth.",
+    "boardMemberTitle1": "CEO Teso Group",
+    "boardMemberTitle2": "CEO Teso Group",
+    "boardMemberTitle3": "CEO Teso Group",
+    "boardMemberName1": "S. Bolor",
+    "boardMemberName2": "S. Bolor",
+    "boardMemberName3": "S. Bolor"
   },
   "whatWeDo": {
     "title": "What We Do",
-    "subtitle": "Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.",
+    "subtitle": "Through our funds, we transform financial insight into opportunity helping investors \ngrow with confidence and purpose.",
     "aria": {
       "listbox": "What we do options",
       "item": "Select {title}"
@@ -219,6 +230,14 @@
     "saving": "BGM Savings Plan",
     "fixed-income-text": "The “BGM Fixed Income Portfolio Private Investment Fund” is the first investment fund established by our company with the purpose of creating sustainable growth and shared value. \n\nIt provides professional and ethical investment services by managing risks prudently and building a portfolio of fixed-income instruments based on comprehensive research and analysis.",
     "real-state-text": "The “BGM Real Estate Portfolio Private Investment Fund” is an investment fund dedicated to creating future value for investors by combining asset and real estate management. \n\nIt focuses on value-driven real estate investments, guided by comprehensive research and international standards of risk management.",
-    "saving-text": "Balanced Growth Management LLC, operating under a special license from the Financial Regulatory Commission, implements the “Savings Program” to responsibly manage monthly contributions from employers and employees. \n\nThe program aims to promote long-term financial security, create sustainable value, and support the shared goal of building financial freedom for the future."
+    "saving-text": "Balanced Growth Management LLC, operating under a special license from the Financial Regulatory Commission, implements the “Savings Program” to responsibly manage monthly contributions from employers and employees. \n\nThe program aims to promote long-term financial security, create sustainable value, and support the shared goal of building financial freedom for the future.",
+    "fundeManagerTitle1": "BGM Fund manager",
+    "fundeManagerTitle2": "BGM Fund manager",
+    "fundeManagerTitle3": "BGM Fund manager",
+    "fundeManagerName1": "Bilegt G",
+    "fundeManagerName2": "Oyunjunai KH",
+    "fundeManagerName3": "Aminaa B",
+    "teamIntroducition": "Team Introducition",
+    "teamIntroducitionText": "Speak directly with our investment professionals to explores \ntrategies tailored to your goals."
   }
 }
