--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -206,6 +206,8 @@
     "health-text": "As part of our corporate social responsibility, we organize an annual Blood Donation Campaign with the voluntary participation of our employees.",
     "edu": "Education",
     "edu-text": "We participated as a sponsor of the 10th National Finance Management Olympiad as part of our corporate social responsibility.",
+    "search-job": "Search job",
+    "search-job-text": "Join our team and help shape the \nfuture of finance with BGM.",
     "env": "Environment",
     "env-text": "BGM has established its own grove within the “Orshikh Togol” project and plants trees there every year."
   },
