--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -109,6 +109,7 @@
     "header2": "компани",
     "header3": "Balanced Growth Management",
     "ceo-creeting": "Хөрөнгийн менежмент гэдэг нь зүгээр тоон үзүүлэлтүүдийн тухай биш, харин итгэлцэл, сахилга бат, стратегийн урьдчилсан харааг төлөвшүүлэхийн тухай юм. \n\nБидний байгуулж буй бүхий л хөрөнгийн багц нь судалгаанд тулгуурласан, итгэл үнэмшлээр хөтлөгдсөн, шударга ёс ба шинэлэг сэтгэлгээг тусгасан байх ёстой.",
+    "cio-creeting": "Дэлхий даяар мянга мянган хөрөнгө оруулалтын боломжууд байдаг. Бид, монголчууд, эдгээр боломжуудад ойртох хэрэгтэй. \n\nБидний зорилго бол үйлчлүүлэгчиддээ тэдгээр боломжуудад хялбархан хүрэхэд нь туслах явдал юм. Үйлчлүүлэгчид маань өсөх үед бид өсдөг. Бид хамтдаа өсдөг.",
     "mission": "Эрхэм зорилго",
     "mission-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "vision": "Алсын хараа",
@@ -117,6 +118,8 @@
     "value-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "ceo-name": "Д.Одмаа",
     "ceo-pos": "Гүйцэтгэх захирал",
+    "cio-name": "Г.Маргад ",
+    "cio-pos": "Хөрөнгө оруулалт хариуцсан дэд захирал",
     "bgm-name": "Balanced Growth Management",
     "text1": "Манай компани нь уламжлалт санхүүгийн зах зээлийг технологи ба инновацитай хослуулж, мэргэжлийн түвшний, дэвшилтэт бүтээгдэхүүн болон үйлчилгээг хүргэх зорилгоор байгуулагдсан. Бид TESO группийн хөрөнгө оруулалт болон дэмжлэгтэйгээр үйл ажиллагаа явуулдаг.",
     "text2": "Хөрөнгө удирдлагын компани болохын хувьд бид хөрөнгийн өсөлтийг дэмжих зорилготой хөрөнгө оруулалтын сангуудыг байгуулж, удирддаг. 2025 он гэхэд бид нийт ₮50 тэрбум төгрөгийн үнэлгээ бүхий хоёр тусгай зөвшөөрөлтэй хувийн сан болон хадгаламжийн хөтөлбөрийг удирдаж байна.",
@@ -202,6 +205,8 @@
     "health-text": "Нийгмийн хариуцлагынхаа хүрээнд бид ажилтнуудынхаа сайн дурын оролцоотой цусны донорын аяныг жил бүр зохион байгуулдаг.",
     "edu": "Боловсрол",
     "edu-text": "Бид Үндэсний Санхүүгийн Менежментийн 10-р олимпиадад ивээн тэтгэгчээр оролцсон.",
+    "search-job": "Search job",
+    "search-job-text": "Манай багт нэгдэж, BGM-ийн тусламжтайгаар \nсанхүүгийн салбарын ирээдүйг бүрдүүлээрэй.",
     "env": "Байгаль орчин",
     "env-text": "BGM нь “Орших Тогол” төслийн хүрээнд өөрийн төгөлтэй бөгөөд жил бүр түүндээ мод тарьдаг."
   },
