--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,8 +52,8 @@
     }
   },
   "news": {
-    "title1": "News & Insight",
-    "title2": "",
+    "title1": "News & ",
+    "title2": "Insight",
     "text": "Explore expert perspectives, research, and commentary on global and local markets.",
     "seeMore": "See more"
   },
