--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -199,7 +199,7 @@
     "career-journey-text": "Санхүү, банк, бизнесийн чиглэлийн оюутнуудад зориулсан цалинтай дадлагын хөтөлбөр.\n\nОнол ба практикийг хослуулсан энэхүү хөтөлбөр нь салбарын бодит ажлын туршлага олгож, шилдэг оролцогчдод ажиллах боломж нээдэг.",
     "early-bird": "Early Bird",
     "early-bird-text": "Санхүү, хөрөнгө оруулалтад сонирхолтой төгсөх ангийн оюутнуудад зориулсан богино, чиглүүлэгтэй дадлагын хөтөлбөр—салбарын онцлог, ажлын дадлыг бодитоор мэдрүүлж, мэргэжлийн сонголтод дэм болдог.\n\nЖил бүр өргөн хүрээнд зохион байгуулагдаж, ирээдүйн мэргэжилтнүүдийн урсгалыг бэхжүүлж, салбарын хөгжилд хувь нэмэр оруулдаг.",
-    "apply-now": "Одоо өргөдөл илгээх",
+    "apply-now": "Өргөдөл илгээх",
     "pro-network": "Мэргэжлийн сүлжээ",
     "health": "Эрүүл мэнд",
     "health-text": "Нийгмийн хариуцлагынхаа хүрээнд бид ажилтнуудынхаа сайн дурын оролцоотой цусны донорын аяныг жил бүр зохион байгуулдаг.",
