--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -200,7 +200,7 @@
     "career-journey-text": "A paid internship program for students majoring in finance, banking, and business.\n\nCombining theoretical and practical training, the program provides real industry experience and offers career opportunities for outstanding talents.",
     "early-bird": "Early Bird",
     "early-bird-text": "A short, guided internship for graduating students interested in finance and investing—offering practical exposure to industry specifics and work practices to inform career choices.\n\nHeld annually at scale to grow the future talent pipeline and support the development of the sector.",
-    "apply-now": "Apply Now",
+    "apply-now": "Apply",
     "pro-network": "Professional Network",
     "health": "Health",
     "health-text": "As part of our corporate social responsibility, we organize an annual Blood Donation Campaign with the voluntary participation of our employees.",
