--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -80,7 +80,8 @@
     "asset-management": "Хөрөнгийн удирдлага",
     "career": "Карьер",
     "news-insights": "Мэдээ & Мэдээлэл",
-    "contact": "Холбоо барих"
+    "contact": "Холбоо барих",
+    "documents": "Баримт бичиг"
   },
   "emailAlerts": {
     "title": "И-мэйл мэдэгдэл",
@@ -240,5 +241,15 @@
     "fundeManagerName3": "Аминаа Б",
     "teamIntroducition": "Багийн танилцуулга",
     "teamIntroducitionText": "Таны зорилгод нийцсэн хөрөнгө оруулалтын стратегийг хамтдаа судлахын тулд манай хөрөнгө \nоруулалтын мэргэжилтнүүдтэй шууд холбогдоорой."
+  },
+  "docs": {
+    "sonorhol-zorchil": "Сонирхлийн зөрчилтэй хэлцэл хийх журам",
+    "uil-ajillagaa": "Үйл ажиллагааны журам",
+    "hamtran ajillah": "Оролцогч талуудтай хамтран ажиллах бодлого",
+    "zalgamj halaa": "Залгамж халааны бодлого",
+    "tsalin": "Цалин урамшууллын бодлого",
+    "Procedures": "Журам",
+    "Policies": "Бодлого",
+    "download": "Нээх"
   }
 }
