--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,7 +81,7 @@
     "career": "Careers",
     "news-insights": "News & Insight",
     "contact": "Contacts",
-    "documents": "Documets"
+    "documents": "Documents"
   },
   "emailAlerts": {
     "title": "Email Alerts",
