--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -15,9 +15,9 @@
     "title": "Балансэд Грөүт",
     "title1": "гэж юу вэ",
     "companyName": "Балансэд Грөүт Менежмент",
-    "text": "Тэнцвэртэй өсөлтийн үзэл санааг анх 1950-аад онд эдийн засагч Рагнар Нурксе дэвшүүлсэн юм. Энэ нь хөдөө аж ахуй, үйлдвэр, үйлчилгээ зэрэг эдийн засгийн бүх гол салбарыг зэрэгцээ хөгжүүлэх нь урт хугацааны тогтвортой өсөлтөд чухал болохыг онцолдог. Нурксе нэг салбарт төвлөрөхийн оронд олон салбарт уялдаа холбоотой хөрөнгө оруулалт хийх нь дотоодын зах зээлийг өргөжүүлж, эдийн засаг даяар эерэг нөлөө үзүүлнэ гэж үзсэн байдаг.",
+    "text": "“Тэнцвэртэй өсөлт” хэмээх ойлголтыг анх 1950-аад онд эдийн засагч Рагнар Нурксэ дэвшүүлсэн бөгөөд энэ нь эдийн засгийн бүх үндсэн салбарууд — хөдөө аж ахуй, аж үйлдвэр, үйлчилгээ зэргийг зэрэгцүүлэн хөгжүүлж初, тогтвортой бөгөөд урт хугацааны өсөлтөд хүрэх чухал нөхцөл хэмээн үздэг. Зөвхөн нэг чиглэлд анхаарал хандуулахын оронд олон салбарт зэрэг хөрөнгө оруулалт хийх нь дотоодын зах зээлийг өргөжүүлж, нийт эдийн засагт эерэг, хурдацтай нөлөө үзүүлнэ гэж тэрээр тодорхойлсон. ",
     "text1": "Өнөө үед энэхүү зарчим нь макро эдийн засгаас цааш хальж, бизнес болон хөрөнгө оруулалтын стратегид өргөнөөр хэрэглэгдэж байна. Энэ нь эрсдэл ба өгөөжийн ухаалаг тэнцвэрийг илэрхийлж, богино хугацааны ашиг бус харин тогтвортой, урт хугацааны хөгжлийг илүүд үзэх хандлагыг илтгэнэ.",
-    "text2": "Balanced Growth Management компанид бид энэхүү философид үнэнч байдаг. Бид итгэлцэл, оновчтой стратеги, тогтвортой санхүүгийн өсөлтийн алсын хараанд тулгуурлан харилцагчид болон түншүүддээ урт хугацааны, тогтвортой хөрөнгө оруулалтын шийдлүүдийг хүргэхийн төлөө чармайн ажилладаг.",
+    "text2": "Balanced Growth Management компани нь энэхүү философийг эрхэмлэн ажилладаг бөгөөд харилцагч бүртээ урт хугацаанд тогтвортой өгөөж бий болгох, ухаалаг хөрөнгө оруулалтын шийдлүүдийг боловсруулж, итгэлт түнш нь байхыг эрхэмлэн ажилладаг. ",
     "cardText": "YES, WE ARE BALANCERS"
   },
   "hero": {
